# dongle_switch

./: CMakeLists.txt  nrf52840dongle_nrf52840.overlay  prj.conf
src/: main.c
